# New in version 1.3.3

* Fixed a crash when using ctags over SFTP.
* Fixed a crash when creating new files over SFTP.
* Require UUID in bundle items, allows loading incomplete bundles.


# New in version 1.3.2

* Fixed a crash when closing document windows
* Fixed a crash when pasting text in visual mode
* Fixed a crash when saving fails due to permission denied
* Fixed a crash when closing another tab by clicking the X icon
* Fixed a crash when fuzzy filtering files
* Prevent symlink loops in file explorer
* Added support for submitting crash reports


# New in version 1.3.1

## Bugfixes

* Many memory leaks have been fixed.
* Garbage collection is no longer used.
* Externally modified documents that aren't edited in Vico are now automatically reverted.
  To go back to the old behaviour of always asking if Vico should revert a document:
  $ defaults write se.bzero.vico alwaysAskModifiedDocument -bool true
* Allow scrolling beyond last screenful with <ctrl-e>.
* Implement the ' and ` marks. Use `` to jump back to the last jump.
* Unbreak :quit behaviour.
* Caret screen update artifacts fixed.
* Implement detaching of split views to new windows (bound to <ctrl-w>D)
* <command-n> now opens a new window (<command-shift-N> opens a new untitled document)
* Fix a crash in the file explorer when filtering symlinked directories.


# New in version 1.3

* Project search using Ack
* Highlighting of matching smart pairs
* Added `zt`, `zb` and `zz` commands; scrolls the screen relative the caret position
* Block text objects added: `i[`, `ib`, `iB` and `i<`, as well as the 'a' counterparts
* "Breadcrumbs" folder navigation in file explorer
* Support for Finder aliases in the file explorer
* Added setting for blinking caret
* Added boolean 'clipboard' setting; when enabled (default off), yanks by default into '+' register (the clipboard)
* Ctrl-u and ctrl-w recognized in insert mode
* Standard Cocoa alt-backspace / alt-delete keys recognized in insert mode